feat: footer link add

--- a/index.html
+++ b/index.html
@@ -623,26 +623,27 @@ contact at highhay dot com
       <nav class="nav-social nav-social-a">
         <ul>
           <li class="nav-item">
-            <a class="nav-link btn" href="#">
+            <a class="nav-link btn" href="https://www.facebook.com/mehedyhasan.sarkar.9">
               <span class="icon">
-                <i class="ion ion-logo-instagram"></i>
+                <i class="ion ion-logo-facebook"></i>
               </span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn" href="#">
-              <span class="icon">
-                <i class="ion ion-logo-twitter"></i>
+            <a class="nav-link btn" href="https://www.github.com/mh-sarkar">
+              <span class="icon"> 
+                <i class="ion ion-logo-github"></i>
               </span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn" href="#">
+            <a class="nav-link btn" href="https://www.linkedin.com/in/mehedi-hasan-sarkar-454396100">
               <span class="icon">
                 <i class="ion ion-logo-linkedin"></i>
-              </span>
+              </span> 
             </a>
           </li>
+          
         </ul>
       </nav>
     </div>
